header overspill fix. content change

--- a/content/css/base/layout.css
+++ b/content/css/base/layout.css
@@ -1,5 +1,39 @@
 body {
   background-color: var(--c-page-background);
+  position: relative;
+}
+
+.page-bg-top {
+  position: absolute;
+  z-index: -10;
+  inset: 0;
+  overflow: hidden;
+  pointer-events: none;
+  
+
+  &:before {
+    /* @TODO: fix x scroll maybe by wrapping and adding overflow: hidden */
+    --overspill: 15%;
+    
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: calc(var(--overspill) * -1);
+    width: calc((var(--overspill) * 2) + 100%);
+    height: 25dvh;
+    background-image:
+      linear-gradient(var(--grid-line-color) var(--grid-line-thickness), transparent var(--grid-line-thickness)),
+      linear-gradient(90deg, var(--grid-line-color) var(--grid-line-thickness), transparent var(--grid-line-thickness))
+    ;
+    background-size:
+      var(--grid-size) var(--grid-size),
+      var(--grid-size) var(--grid-size)
+    ;
+    background-position: center calc(0% - var(--grid-line-thickness));
+    -webkit-mask-image: var(--grid-mask);
+    mask-image: var(--grid-mask);
+  }
 }
 
 .intro {
